renamed Llama2 to Ollama